--- a/wp-content/themes/MDGM/less/template.less
+++ b/wp-content/themes/MDGM/less/template.less
@@ -206,7 +206,14 @@ main{
 		}
 	}
 }
-
+aside{
+	ul{
+		padding: 0;
+		li{
+			list-style-type: none;
+		}
+	}
+}
 .home-page{
 	.woo-product-loop{
 		a{
@@ -686,6 +693,31 @@ ins {
 	    color: @dark;
 	    text-decoration: none;
 	}
+.uk-search{
+	button{
+		background: transparent !important;
+		border:none !important;
+		color: @dark !important;
+		font-shadow:none !important;
+		font-size: 14px !important;
+	}
+}
+.uk-search:before{
+	content:"";
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
