--- a/wp-content/themes/MDGM/less/uikit.less
+++ b/wp-content/themes/MDGM/less/uikit.less
@@ -47,6 +47,7 @@
 @import "components/slideshow.less";
 @import "components/slider.less";
 @import "components/slidenav.less";
+@import "components/search.less";
 @import "components/dotnav.less";
 
 // Need to be loaded last
