--- a/wp-content/themes/MDGM/less/variables.less
+++ b/wp-content/themes/MDGM/less/variables.less
@@ -17,6 +17,7 @@
 @header-height:@units*20;
 @nav-height:@header-height;
 @nav-item-height:@nav-height;
+@radius:4px;
 
 // Backgrounds
 @header-bg:@light;
