--- a/wp-content/themes/MDGM/less/variables.less
+++ b/wp-content/themes/MDGM/less/variables.less
@@ -26,7 +26,7 @@
 @footer-bg:@light;
 
 // Typography
-@font: Helvetica, Arial, sans-serif;
+@font: Helvetica, Arial, sans-serif ;
 @font-heading: @font;
 
 // @font-face {
@@ -39,15 +39,15 @@
 //Mixins
 .font{
 	font-family: @font !important;
-	font-weight: 400;
-  font-style: normal;
-  font-size: 16px;
-  line-height: 24px;
+	font-weight: 400 !important;
+  font-style: normal !important;
+  font-size: 16px !important;
+  line-height: 26px !important;
 }
 .font-heading{
 	text-transform: normal !important;
 	font-weight: 400 !important;
-	letter-spacing: -1px;
+	letter-spacing: -1px !important;
 }
 .shadow{
 	-webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.55);
