--- a/wp-content/themes/MDGM/less/uikit.less
+++ b/wp-content/themes/MDGM/less/uikit.less
@@ -49,6 +49,7 @@
 @import "components/slidenav.less";
 @import "components/search.less";
 @import "components/dotnav.less";
+@import "components/accordion.less";
 
 // Need to be loaded last
 @import "core/text.less";
